--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
         </div>
         <h2>Ett meddelande från VD</h2>
         <div class="contact-vd">
-            <p><strong>Välkomna till SSS Event!</strong> <br> <br>Som VD för företaget är jag stolt över vårt engagerade och kompetenta team, som
-                dagligen jobbar hårt för att leverera de bästa evenemangen för våra kunder.</p>
+            <p><strong>Välkomna till SSS Event!</strong> <br> <br> <i>Som VD för företaget är jag stolt över vårt engagerade och kompetenta team, som
+                dagligen jobbar hårt för att leverera de bästa evenemangen för våra kunder</i></p>
           <br> <br> <br> 
             <img src="bild på vd.jpg" alt="VDs Bild">
             <p><strong>Vänliga hälsningar,<br>
@@ -52,10 +52,10 @@
             <a href="mailto:vd@trollvd.se"><E-mail>Mejla Oss</E-mail></a>
         <form class="contact-form">
             <label for="name">Namn</label>
-            <input type="text" id="name" name="name" required>
+            <input type="text"name="name" required>
 
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" name="email" required>
 
             <label for="message">Meddelande</label>
             <textarea id="message" name="message" required></textarea>
